--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@chakra-ui/react": "^3.3.0",
     "@emotion/react": "^11.14.0",
     "cra-template": "1.2.0",
+    "google-icon": "^1.0.1",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
